Library/AXL(Library)/C, C++/AXD.h

// Verify the rising or falling edge value by double word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lModuleNo : Number of module
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// *upValue  : 0x00 ~ 0x0FFFFFFFF
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeGetDword(long lModuleNo, long lOffset, DWORD uMode, DWORD *upValue);
// Set the rising or falling edge value by bit unit in entire input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// uValue    : DISABLE(0)
//           : ENABLE(1)
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeSet(long lOffset, DWORD uMode, DWORD uValue);
// Verify the rising or falling edge value by bit unit in entire input contact module and Offset position of Interrupt Rising / Falling Edge register
//===============================================================================================//
// lOffset   : Offset position for input contact
// uMode     : DOWN_EDGE(0)
//           : UP_EDGE(1)
// *upValue  : DISABLE(0)
//           : ENABLE(1)
//===============================================================================================//
DWORD    __stdcall AxdiInterruptEdgeGet(long lOffset, DWORD uMode, DWORD *upValue);
//========== Verification group of input / output signal level setting
//==Verification group of input signal level setting
// Set data level by bit unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdiLevelSetInportBit(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by byte unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// uLevel      : 0x00 ~ 0x0FF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdiLevelSetInportByte(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by word unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// uLevel      : 0x00 ~ 0x0FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdiLevelSetInportWord(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by double word unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// uLevel      : 0x00 ~ 0x0FFFFFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdiLevelSetInportDword(long lModuleNo, long lOffset, DWORD uLevel);
// Verify data level by bit unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upLevel    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdiLevelGetInportBit(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by byte unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upLevel    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdiLevelGetInportByte(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by word unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upLevel    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdiLevelGetInportWord(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by double word unit in Offset position of specified input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upLevel    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdiLevelGetInportDword(long lModuleNo, long lOffset, DWORD *upLevel);
// Set data level by bit unit in Offset position of entire input contact module
//===============================================================================================//
// lOffset     : Offset position for input contact
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdiLevelSetInport(long lOffset, DWORD uLevel);
// Verify data level by bit unit in Offset position of entire input contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for input contact
// *upLevel    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdiLevelGetInport(long lOffset, DWORD *upLevel);
//==Verification group of output signal level setting
// Set data level by bit unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uLevel      : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoLevelSetOutportBit(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by byte unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uLevel      : 0x00 ~ 0x0FF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdoLevelSetOutportByte(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uLevel      : 0x00 ~ 0x0FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdoLevelSetOutportWord(long lModuleNo, long lOffset, DWORD uLevel);
// Set data level by double word unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// uLevel      : 0x00 ~ 0x0FFFFFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
//===============================================================================================//
DWORD    __stdcall AxdoLevelSetOutportDword(long lModuleNo, long lOffset, DWORD uLevel);
// Verify data level by bit unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upLevel    : LOW(0)
//             : HIGH(1)
//===============================================================================================//
DWORD    __stdcall AxdoLevelGetOutportBit(long lModuleNo, long lOffset, DWORD *upLevel);
// Verify data level by byte unit in Offset position of specified output contact module
//===============================================================================================//
// lModuleNo   : Number of module
// lOffset     : Offset position for output contact
// *upLevel    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
//===============================================================================================//
DWORD    __stdcall AxdoLevelGetOutportByte(long lModuleNo, long lOffset, DWORD *upLevel);