Library/AXL(Library)/Visual Basic(Net)/AXD.vb


' Verify the rising or falling edge value by double word unit in specified input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lModuleNo : Number of module
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' *upValue   : 0x00 ~ 0x0FFFFFFFF
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeGetDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uMode As Integer, ByRef upValue As Integer) As Integer


' Set the rising or falling edge value by bit unit in entire input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' uValue     : DISABLE(0)
'            : ENABLE(1)
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeSet Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uMode As Integer, ByVal uValue As Integer) As Integer


' Verify the rising or falling edge value by bit unit in entire input contact module and Offset position of Interrupt Rising / Falling Edge register
'==============================================================================================='
' lOffset   : Offset position for input contact
' uMode      : DOWN_EDGE(0)
'            : UP_EDGE(1)
' *upValue   : DISABLE(0)
'            : ENABLE(1)
'==============================================================================================='
Public Declare Function AxdiInterruptEdgeGet Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uMode As Integer, ByRef upValue As Integer) As Integer


'========== Verification group of input / output signal level setting =================================================================================
'==Verification group of input signal level setting
' Set data level by bit unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' uLevel     : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdiLevelSetInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by byte unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' uLevel      : 0x00 ~ 0x0FF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdiLevelSetInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by word unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' uLevel      : 0x00 ~ 0x0FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdiLevelSetInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by double word unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' uLevel      : 0x00 ~ 0x0FFFFFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdiLevelSetInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Verify data level by bit unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upLevel   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdiLevelGetInportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Verify data level by byte unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upLevel    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdiLevelGetInportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Verify data level by word unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upLevel    : 0x00 ~ 0x0FFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdiLevelGetInportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Verify data level by double word unit in Offset position of specified input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upLevel    : 0x00 ~ 0x0FFFFFFFF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdiLevelGetInportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Set data level by bit unit in Offset position of entire input contact module
'==============================================================================================='
' lOffset     : Offset position for input contact
' uLevel     : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdiLevelSetInport Lib "AXL.dll" (ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Verify data level by bit unit in Offset position of entire input contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for input contact
' *upLevel   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdiLevelGetInport Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


'==Verification group of output signal level setting
' Set data level by bit unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uLevel     : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoLevelSetOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by byte unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uLevel      : 0x00 ~ 0x0FF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoLevelSetOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uLevel      : 0x00 ~ 0x0FFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoLevelSetOutportWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Set data level by double word unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' uLevel      : 0x00 ~ 0x0FFFFFFFF(If set bit is '1', It means HIGH, If set bit is '0', It means LOW)
'==============================================================================================='
Public Declare Function AxdoLevelSetOutportDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByVal uLevel As Integer) As Integer


' Verify data level by bit unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upLevel   : LOW(0)
'            : HIGH(1)
'==============================================================================================='
Public Declare Function AxdoLevelGetOutportBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer


' Verify data level by byte unit in Offset position of specified output contact module
'==============================================================================================='
' lModuleNo   : Number of module
' lOffset     : Offset position for output contact
' *upLevel    : 0x00 ~ 0x0FF(Read bit '1' means 'HIGH', Read bit '0' means 'LOW')
'==============================================================================================='
Public Declare Function AxdoLevelGetOutportByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upLevel As Integer) As Integer

